--- a/src/gui/menu/createMenu.fxml
+++ b/src/gui/menu/createMenu.fxml
@@ -10,19 +10,20 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.CreateNewMenuController">
+<VBox prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.CreateNewMenuController">
    <children>
-      <AnchorPane prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;">
+      <AnchorPane prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="save" layoutX="452.0" layoutY="538.0" mnemonicParsing="false" onAction="#saveDish" prefHeight="34.0" prefWidth="115.0" stylesheets="@../general/GeneralStyleSheet.css" text="Save" visible="false">
+            <Button fx:id="saveEdit_btn" layoutX="452.0" layoutY="538.0" mnemonicParsing="false" onAction="#saveEdit" prefHeight="34.0" prefWidth="115.0" stylesheets="@../general/GeneralStyleSheet.css" text="Save Edit" visible="false">
                <styleClass>
                   <String fx:value="ViewBtnOrange" />
                   <String fx:value="lbl" />
                </styleClass></Button>
             <ListView fx:id="DishesList" layoutX="301.0" layoutY="142.0" onMouseClicked="#setDishFields" prefHeight="134.0" prefWidth="169.0" AnchorPane.topAnchor="142.0" />
-            <Label fx:id="createMessageLabel" layoutX="317.0" layoutY="606.0" prefHeight="18.0" prefWidth="426.0" textFill="RED" />
             <ComboBox fx:id="ChooseMenuTypeComboBox" layoutX="383.0" layoutY="68.0" onAction="#chooseType" prefHeight="29.0" prefWidth="245.0" promptText="Dish Type" stylesheets="@../general/GeneralStyleSheet.css">
                <styleClass>
                   <String fx:value="comboBox" />
@@ -47,21 +48,20 @@
                   <String fx:value="ViewBtn" />
                   <String fx:value="lbl" />
                </styleClass></Button>
-            <Label fx:id="errorMessage" layoutX="284.0" layoutY="588.0" prefHeight="18.0" prefWidth="509.0" textFill="RED" />
             <ListView fx:id="dishesToAdd" layoutX="563.0" layoutY="142.0" onMouseClicked="#displayDish" prefHeight="134.0" prefWidth="169.0" stylesheets="@../general/GeneralStyleSheet.css" />
-            <Label fx:id="dishesToAddMessage" layoutX="568.0" layoutY="120.0" prefHeight="18.0" prefWidth="156.0" />
+            <Label fx:id="dishesToAddMessage" layoutX="568.0" layoutY="120.0" prefHeight="18.0" prefWidth="156.0" styleClass="lbl" />
             <Label fx:id="fileChooserMsg" layoutX="220.0" layoutY="371.0" prefHeight="18.0" prefWidth="210.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" />
-            <ImageView fx:id="rightarrw_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="156.0" onMouseClicked="#saveDish" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="rightarrw_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="156.0" onMouseClicked="#saveDish" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
                <image>
                   <Image url="@../img/rightarrow.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="leftarrow_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="206.0" onMouseClicked="#deleteDishFromMenu" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="leftarrow_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="206.0" onMouseClicked="#deleteDishFromMenu" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
                <image>
                   <Image url="@../img/leftarrow.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="plus_img" fitHeight="45.0" fitWidth="32.0" layoutX="261.0" layoutY="190.0" onMouseClicked="#AddDish" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="plus_img" fitHeight="45.0" fitWidth="32.0" layoutX="261.0" layoutY="190.0" onMouseClicked="#AddDish" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
                <image>
                   <Image url="@../img/plus.png" />
                </image>
@@ -72,6 +72,17 @@
                </image>
             </ImageView>
             <Button fx:id="edit_btn" layoutX="765.0" layoutY="197.0" mnemonicParsing="false" onAction="#edit" styleClass="ViewBtnOrange" text="Edit" visible="false" />
+            <ImageView fx:id="selected_image" fitHeight="150.0" fitWidth="200.0" layoutX="724.0" layoutY="438.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="price_lbl" layoutX="402.0" layoutY="320.0" styleClass="lbl" text="Price" />
+            <HBox alignment="CENTER" layoutX="357.0" layoutY="282.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="20.0" prefWidth="305.0" AnchorPane.leftAnchor="357.0" AnchorPane.rightAnchor="348.0">
+               <children>
+                  <Label fx:id="error_lbl" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="20.0" prefWidth="75.0" textAlignment="CENTER" textFill="RED" HBox.hgrow="ALWAYS">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
       </AnchorPane>
    </children>
