--- a/bin/general/GeneralStyleSheet.css
+++ b/bin/general/GeneralStyleSheet.css
@@ -139,12 +139,12 @@
 .btn:hover,
 .btn:focus {
 	-fx-cursor:hand;
-  -fx-background-color: #f79452;
+  -fx-background-color:#f79452;
   -fx-box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
 }
 
 .btn:active {
-  -fx-background-color: #ec7729;
+  -fx-background-color:#F7C665;
   -fx-box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
 }
 
