--- a/bin/order/BranchMenuScreen.fxml
+++ b/bin/order/BranchMenuScreen.fxml
@@ -29,7 +29,7 @@
             </AnchorPane>
             <BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0">
                <left>
-                  <VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="595.0" prefWidth="653.0">
+                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="595.0" prefWidth="653.0">
                      <children>
                         <ScrollPane hbarPolicy="NEVER" prefWidth="536.0" styleClass="transparent" stylesheets="@../general/GeneralStyleSheet.css">
                           <content>
@@ -40,6 +40,16 @@
                               </GridPane>
                           </content>
                         </ScrollPane>
+                        <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back_to_branch_selection" prefHeight="38.0" prefWidth="77.0" text="Back" translateX="20.0" translateY="250.0">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <styleClass>
+                              <String fx:value="add-btn" />
+                              <String fx:value="ViewBtn" />
+                              <String fx:value="lbl" />
+                           </styleClass>
+                        </Button>
                      </children>
                   </VBox>
                </left>
@@ -89,18 +99,19 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </VBox.margin>
                               </VBox>
-                              <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="312.0">
+                              <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="271.0">
                                  <VBox.margin>
                                     <Insets bottom="15.0" />
                                  </VBox.margin>
                                  <children>
-                                    <Button fx:id="add_btn" mnemonicParsing="false" onAction="#addToOrder" prefHeight="22.0" prefWidth="149.0" stylesheets="@../general/GeneralStyleSheet.css" text="Add To Order" textAlignment="CENTER">
+                                    <Button fx:id="add_btn" mnemonicParsing="false" onAction="#addToOrder" prefHeight="22.0" prefWidth="149.0" stylesheets="@../general/GeneralStyleSheet.css" text="Add To Order" textAlignment="CENTER" translateX="15.0">
                                        <opaqueInsets>
                                           <Insets />
                                        </opaqueInsets>
                                        <styleClass>
                                           <String fx:value="btn" />
                                           <String fx:value="add-btn" />
+                                          <String fx:value="lbl" />
                                        </styleClass>
                                     </Button>
                                     <ImageView fx:id="green_v_img" fitHeight="24.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" visible="false">
@@ -112,18 +123,7 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <HBox alignment="BOTTOM_CENTER" layoutY="474.0" prefWidth="356.0">
-                           <children>
-                              <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back_to_branch_selection" styleClass="add-btn" text="Back">
-                                 <HBox.margin>
-                                    <Insets bottom="20.0" left="10.0" />
-                                 </HBox.margin>
-                                 <cursor>
-                                    <Cursor fx:constant="HAND" />
-                                 </cursor>
-                              </Button>
-                           </children>
-                        </HBox>
+                        <HBox alignment="BOTTOM_CENTER" layoutY="474.0" prefWidth="356.0" />
                         <VBox fx:id="cart_vbox" alignment="TOP_RIGHT" layoutX="150.0" layoutY="2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #fff; -fx-border-style: solid; -fx-background-radius: 15;" visible="false" />
                      </children>
                   </Pane>
