--- a/src/gui/order/Dish.fxml
+++ b/src/gui/order/Dish.fxml
@@ -14,11 +14,11 @@
    <children>
       <AnchorPane fx:id="dish" onMouseClicked="#click" prefHeight="215.0" prefWidth="225.0" style="-fx-background-color: #DEB887;" stylesheets="@../general/GeneralStyleSheet.css">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0" stylesheets="@../general/GeneralStyleSheet.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ff;" stylesheets="@../general/GeneralStyleSheet.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <HBox alignment="TOP_CENTER" prefHeight="41.0" prefWidth="165.0">
                      <children>
-                        <Label fx:id="dish_name_label" stylesheets="@../general/GeneralStyleSheet.css" text="Fries">
+                        <Label fx:id="dish_name_label" prefHeight="24.0" prefWidth="107.0" stylesheets="@../general/GeneralStyleSheet.css" text="Fries">
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" right="20.0" />
                            </HBox.margin>
@@ -26,7 +26,7 @@
                               <Font name="Levenim MT Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label fx:id="dish_price_label" stylesheets="@../general/GeneralStyleSheet.css" text="10">
+                        <Label fx:id="dish_price_label" prefHeight="24.0" prefWidth="52.0" stylesheets="@../general/GeneralStyleSheet.css" text="10">
                            <HBox.margin>
                               <Insets left="20.0" />
                            </HBox.margin>
