--- a/bin/menu/createMenu.fxml
+++ b/bin/menu/createMenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -14,76 +15,87 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.CreateNewMenuController">
+<VBox alignment="CENTER" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.CreateNewMenuController">
    <children>
-      <AnchorPane prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" VBox.vgrow="ALWAYS">
+      <Group VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="saveEdit_btn" layoutX="452.0" layoutY="538.0" mnemonicParsing="false" onAction="#saveEdit" prefHeight="34.0" prefWidth="115.0" stylesheets="@../general/GeneralStyleSheet.css" text="Save Edit" visible="false">
-               <styleClass>
-                  <String fx:value="ViewBtnOrange" />
-                  <String fx:value="lbl" />
-               </styleClass></Button>
-            <ListView fx:id="DishesList" layoutX="301.0" layoutY="142.0" onMouseClicked="#setDishFields" prefHeight="134.0" prefWidth="169.0" AnchorPane.topAnchor="142.0" />
-            <ComboBox fx:id="ChooseMenuTypeComboBox" layoutX="383.0" layoutY="68.0" onAction="#chooseType" prefHeight="29.0" prefWidth="245.0" promptText="Dish Type" stylesheets="@../general/GeneralStyleSheet.css">
-               <styleClass>
-                  <String fx:value="comboBox" />
-                  <String fx:value="lbl" />
-               </styleClass></ComboBox>
-            <Label fx:id="chooseDishMessage" layoutX="303.0" layoutY="118.0" prefHeight="22.0" prefWidth="171.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" />
-            <TextField fx:id="dishPrice" layoutX="449.0" layoutY="312.0" prefHeight="26.0" prefWidth="130.0" promptText="Price" stylesheets="@../general/GeneralStyleSheet.css">
-               <styleClass>
-                  <String fx:value="text-box" />
-                  <String fx:value="lbl" />
-               </styleClass></TextField>
-            <CheckBox fx:id="hasMultipleSizes" layoutX="455.0" layoutY="419.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Multiple sizes" />
-            <CheckBox fx:id="hasMultipleCockingLvls" layoutX="455.0" layoutY="455.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Multiple cooking levels" />
-            <CheckBox fx:id="canAddExtras" layoutX="455.0" layoutY="490.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Extras" />
-            <TextField fx:id="ImageName" editable="false" layoutX="448.0" layoutY="364.0" prefHeight="26.0" prefWidth="130.0" promptText="Image " stylesheets="@../general/GeneralStyleSheet.css">
-               <styleClass>
-                  <String fx:value="text-box" />
-                  <String fx:value="lbl" />
-               </styleClass></TextField>
-            <Button fx:id="ChooseImege" layoutX="610.0" layoutY="369.0" mnemonicParsing="false" onAction="#ChooseImege" stylesheets="@../general/GeneralStyleSheet.css" text="Choose Image">
-               <styleClass>
-                  <String fx:value="ViewBtn" />
-                  <String fx:value="lbl" />
-               </styleClass></Button>
-            <ListView fx:id="dishesToAdd" layoutX="563.0" layoutY="142.0" onMouseClicked="#displayDish" prefHeight="134.0" prefWidth="169.0" stylesheets="@../general/GeneralStyleSheet.css" />
-            <Label fx:id="dishesToAddMessage" layoutX="568.0" layoutY="120.0" prefHeight="18.0" prefWidth="156.0" styleClass="lbl" />
-            <Label fx:id="fileChooserMsg" layoutX="220.0" layoutY="371.0" prefHeight="18.0" prefWidth="210.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" />
-            <ImageView fx:id="rightarrw_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="156.0" onMouseClicked="#saveDish" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
-               <image>
-                  <Image url="@../img/rightarrow.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="leftarrow_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="206.0" onMouseClicked="#deleteDishFromMenu" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
-               <image>
-                  <Image url="@../img/leftarrow.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="plus_img" fitHeight="45.0" fitWidth="32.0" layoutX="261.0" layoutY="190.0" onMouseClicked="#AddDish" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
-               <image>
-                  <Image url="@../img/plus.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="246.0" fitWidth="261.0" layoutX="40.0" layoutY="386.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../img/undraw_online_groceries_a02y.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="edit_btn" layoutX="765.0" layoutY="197.0" mnemonicParsing="false" onAction="#edit" styleClass="ViewBtnOrange" text="Edit" visible="false" />
-            <ImageView fx:id="selected_image" fitHeight="150.0" fitWidth="200.0" layoutX="724.0" layoutY="438.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="price_lbl" layoutX="402.0" layoutY="320.0" styleClass="lbl" text="Price" />
-            <HBox alignment="CENTER" layoutX="357.0" layoutY="282.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="20.0" prefWidth="305.0" AnchorPane.leftAnchor="357.0" AnchorPane.rightAnchor="348.0">
+            <AnchorPane prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;">
                <children>
-                  <Label fx:id="error_lbl" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="20.0" prefWidth="75.0" textAlignment="CENTER" textFill="RED" HBox.hgrow="ALWAYS">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
+                  <Button fx:id="saveEdit_btn" layoutX="452.0" layoutY="538.0" mnemonicParsing="false" onAction="#saveEdit" prefHeight="34.0" prefWidth="115.0" stylesheets="@../general/GeneralStyleSheet.css" text="Save Edit" visible="false">
+                     <styleClass>
+                        <String fx:value="ViewBtnOrange" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </Button>
+                  <ListView fx:id="DishesList" layoutX="301.0" layoutY="142.0" onMouseClicked="#setDishFields" prefHeight="134.0" prefWidth="169.0" AnchorPane.topAnchor="142.0" />
+                  <ComboBox fx:id="ChooseMenuTypeComboBox" layoutX="383.0" layoutY="68.0" onAction="#chooseType" prefHeight="29.0" prefWidth="245.0" promptText="Dish Type" stylesheets="@../general/GeneralStyleSheet.css">
+                     <styleClass>
+                        <String fx:value="comboBox" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </ComboBox>
+                  <Label fx:id="chooseDishMessage" layoutX="303.0" layoutY="118.0" prefHeight="22.0" prefWidth="171.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" />
+                  <TextField fx:id="dishPrice" layoutX="449.0" layoutY="312.0" prefHeight="26.0" prefWidth="130.0" promptText="Price" stylesheets="@../general/GeneralStyleSheet.css">
+                     <styleClass>
+                        <String fx:value="text-box" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </TextField>
+                  <CheckBox fx:id="hasMultipleSizes" layoutX="455.0" layoutY="419.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Multiple sizes" />
+                  <CheckBox fx:id="hasMultipleCockingLvls" layoutX="455.0" layoutY="455.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Multiple cooking levels" />
+                  <CheckBox fx:id="canAddExtras" layoutX="455.0" layoutY="490.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Extras" />
+                  <TextField fx:id="ImageName" editable="false" layoutX="448.0" layoutY="364.0" prefHeight="26.0" prefWidth="130.0" promptText="Image " stylesheets="@../general/GeneralStyleSheet.css">
+                     <styleClass>
+                        <String fx:value="text-box" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </TextField>
+                  <Button fx:id="ChooseImege" layoutX="610.0" layoutY="369.0" mnemonicParsing="false" onAction="#ChooseImege" stylesheets="@../general/GeneralStyleSheet.css" text="Choose Image">
+                     <styleClass>
+                        <String fx:value="ViewBtn" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </Button>
+                  <ListView fx:id="dishesToAdd" layoutX="563.0" layoutY="142.0" onMouseClicked="#displayDish" prefHeight="134.0" prefWidth="169.0" stylesheets="@../general/GeneralStyleSheet.css" />
+                  <Label fx:id="dishesToAddMessage" layoutX="568.0" layoutY="120.0" prefHeight="18.0" prefWidth="156.0" styleClass="lbl" />
+                  <Label fx:id="fileChooserMsg" layoutX="220.0" layoutY="371.0" prefHeight="18.0" prefWidth="210.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" />
+                  <ImageView fx:id="rightarrw_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="156.0" onMouseClicked="#saveDish" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
+                     <image>
+                        <Image url="@../img/rightarrow.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="leftarrow_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="206.0" onMouseClicked="#deleteDishFromMenu" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
+                     <image>
+                        <Image url="@../img/leftarrow.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="plus_img" fitHeight="45.0" fitWidth="32.0" layoutX="261.0" layoutY="190.0" onMouseClicked="#AddDish" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
+                     <image>
+                        <Image url="@../img/plus.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="246.0" fitWidth="261.0" layoutX="40.0" layoutY="386.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/undraw_online_groceries_a02y.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="edit_btn" layoutX="765.0" layoutY="197.0" mnemonicParsing="false" onAction="#edit" styleClass="ViewBtnOrange" text="Edit" visible="false" />
+                  <ImageView fx:id="selected_image" fitHeight="150.0" fitWidth="200.0" layoutX="724.0" layoutY="438.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="price_lbl" layoutX="402.0" layoutY="320.0" styleClass="lbl" text="Price" />
+                  <HBox alignment="CENTER" layoutX="357.0" layoutY="282.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="20.0" prefWidth="305.0" AnchorPane.leftAnchor="357.0" AnchorPane.rightAnchor="348.0">
+                     <children>
+                        <Label fx:id="error_lbl" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="20.0" prefWidth="75.0" textAlignment="CENTER" textFill="RED" HBox.hgrow="ALWAYS">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <Label fx:id="add_lbl" layoutX="505.0" layoutY="140.0" styleClass="lbl" text="Add" />
+                  <Label fx:id="remove_lbl" layoutX="496.0" layoutY="238.0" styleClass="lbl" text="Remove" />
                </children>
-            </HBox>
+            </AnchorPane>
          </children>
-      </AnchorPane>
+      </Group>
    </children>
 </VBox>
