--- a/src/gui/order/Dish.fxml
+++ b/src/gui/order/Dish.fxml
@@ -16,19 +16,19 @@
          <children>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ff;" stylesheets="@../general/GeneralStyleSheet.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <HBox alignment="TOP_CENTER" prefHeight="41.0" prefWidth="165.0">
+                  <HBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="248.0">
                      <children>
-                        <Label fx:id="dish_name_label" prefHeight="24.0" prefWidth="107.0" stylesheets="@../general/GeneralStyleSheet.css" text="Fries">
+                        <Label fx:id="dish_name_label" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="36.0" prefWidth="107.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="chicken breast" HBox.hgrow="ALWAYS">
                            <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" right="20.0" />
+                              <Insets />
                            </HBox.margin>
                            <font>
                               <Font name="Levenim MT Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label fx:id="dish_price_label" prefHeight="24.0" prefWidth="52.0" stylesheets="@../general/GeneralStyleSheet.css" text="10">
+                        <Label fx:id="dish_price_label" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="64.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="52.24" HBox.hgrow="ALWAYS">
                            <HBox.margin>
-                              <Insets left="20.0" />
+                              <Insets />
                            </HBox.margin>
                            <font>
                               <Font name="Levenim MT Bold" size="14.0" />
