--- a/bin/order/PaymentScreen.fxml
+++ b/bin/order/PaymentScreen.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentController">
+<VBox alignment="CENTER" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentController">
    <children>
       <BorderPane prefHeight="650.0" prefWidth="1010.0">
          <center>
