--- a/bin/general/index2Screen.fxml
+++ b/bin/general/index2Screen.fxml
@@ -61,7 +61,7 @@
                                     <Font name="Levenim MT" size="15.0" />
                                  </font>
                               </Label>
-                              <ComboBox fx:id="comboBoxBranch" editable="true" layoutX="120.0" layoutY="91.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="32.0" prefWidth="131.0" promptText="Change branch" style="-fx-background-color: #F7C665;" />
+                              <ComboBox fx:id="comboBoxBranch" layoutX="120.0" layoutY="91.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="32.0" prefWidth="131.0" promptText="Change Branch" style="-fx-background-color: #F7C665;" />
                               <ImageView fx:id="home_page" fitHeight="40.0" fitWidth="38.0" layoutX="216.0" layoutY="8.0" onMouseClicked="#setHomePage" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../img/home-button-black--modified.png" />
