--- a/bin/report/ViewPdfScreen.fxml
+++ b/bin/report/ViewPdfScreen.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -44,6 +45,8 @@
                         <Image url="@../img/undraw_Site_stats_re_ejgy.png" />
                      </image>
                   </ImageView>
+                  <Button fx:id="backBtn" layoutX="52.0" layoutY="581.0" mnemonicParsing="false" onAction="#back" styleClass="ViewBtnOrange" text="Back" />
+                  <Label fx:id="error_lbl" layoutX="491.0" layoutY="419.0" textFill="RED" />
                </children>
             </Pane>
          </children>
