--- a/src/gui/order/Dish.fxml
+++ b/src/gui/order/Dish.fxml
@@ -14,7 +14,7 @@
    <children>
       <AnchorPane fx:id="dish" onMouseClicked="#click" prefHeight="215.0" prefWidth="225.0" style="-fx-background-color: #DEB887;" stylesheets="@../general/GeneralStyleSheet.css">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0"  stylesheets="@../general/GeneralStyleSheet.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0" stylesheets="@../general/GeneralStyleSheet.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <HBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="248.0">
                      <children>
@@ -41,7 +41,7 @@
                   </HBox>
                   <ImageView fx:id="img" fitHeight="123.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../img/fries.jpg" />
+                        <Image url="@../img/imageNotFound.JPG" />
                      </image>
                   </ImageView>
                </children>
